# docs-data-extract

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/config/: extraction_config.yml
backend/app/schemas/: extraction_schema.py
backend/app/services/: extraction.py  extraction_request.py
backend/app/utils/: extraction_utils.py  parser_pdf.py
